@@ -4929,4 +4929,6 @@ PACKAGE: 2.2.99.2
  * Added note about DOAR policies tool into oai.pl
  * Fixed plugins which use mime_types to just take the document type as 
     the mime_type by default.
- 
+
+2006-11-02 cjg 
+ * Removed old subjects input code.
